	argument, allowing to set all three colors simultaneously.

    o	iterating over a factor in a for loop now coerces to a character
	vector (rather than using the integer codes).

    o	data.frame() now recycles columns of list arguments, not just
	vectors and factors.

    o	plot.ts(plot.type="multiple") now makes use of *.lab and
	*.axis graphical parameters (wish of PR#13134 and 13135)

    o	Classes can be exported from a namespace using exportClassPattern
	which has the same syntax as exportPattern.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.


UTILITIES

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
    	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").


INSTALLATION

    o	The shell used by the 'R' script and other shell scripts run
	by 'R CMD foo' can be specified at installation time by
	setting the (precious) configure variable R_SHELL.


C-LEVEL FACILITIES

    o	A helper function, asCharacterFactor(), converts from factors to
	character vectors.


BUG FIXES

    o	The postscript() output for setting text is faster and smaller.

    o	Subsetting a data frame with duplicate column names without
	selecting columns (e.g. z[i,]) no longer makes the column
	names unique.  This was never documented, but some packages
	have assumed it.

    o	data.frame() no longer ignores row names on objects if the